# django_optimize

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: celery_app.py
backend/clients/: models.py
backend/clients/migrations/: 0001_initial.py
backend/project_config/: logging_config.py  settings.py  urls.py
backend/services/: admin.py  models.py  serializers.py  tasks.py  views.py
backend/services/migrations/: 0001_initial.py  0002_subscription_price.py  0003_subscription_comment.py
